--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPlwZafFioNRqOpTCvD25MH",
+      "authorship_tag": "ABX9TyO5Wq0/BKzQwhbmKQftNewM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5842,11 +5842,11 @@
         "print(f\"Los valores atípicos identificados representan el {porcAtipicos:.2f} % del dataset\")"
       ],
       "metadata": {
-        "id": "UXsaOVKrilKE",
-        "outputId": "aa2bf5e2-0407-4847-c5c4-051aa043e261",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UXsaOVKrilKE",
+        "outputId": "aa2bf5e2-0407-4847-c5c4-051aa043e261"
       },
       "execution_count": 137,
       "outputs": [
@@ -5898,9 +5898,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Considerando que los datos que tienen una distribución normal, donde la media +/- 3*DS (Desviaciiones estándar) captura el 99,7 % de las observaciones, se analizan las variables que se aproximan a la normal (según el análisis del apartado anterior).\n",
-        "\n",
-        "De esta manera, cualquier valor que quede fuera del rango mencionado se considerarán una anomalía."
+        "Considerando que los datos que tienen una distribución normal, donde la media +/- 3*DS (Desviaciiones estándar) captura el 99,7 % de las observaciones, se analizan las variables que se aproximan a la normal (según el análisis del apartado anterior). De esta manera, cualquier valor que quede fuera del rango mencionado se considerarán una anomalía."
       ],
       "metadata": {
         "id": "A6NeTP7eJb6O"
@@ -5910,13 +5908,68 @@
       "cell_type": "code",
       "source": [
         "# Se arma un diciconario con las variables que se aproximan a la distribución normal\n",
-        "variablesNormales = {'density':0, 'pH':0}\n"
+        "variablesNormales = {'density':0, 'pH':0}"
       ],
       "metadata": {
         "id": "UP5gsDnMLN-A"
       },
-      "execution_count": null,
+      "execution_count": 138,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "resultadoOutliers = pd.DataFrame()\n",
+        "\n",
+        "for clave, valor in variablesNormales.items():\n",
+        "  variableZ = clave + \"_Z\"              # variable z-score\n",
+        "\n",
+        "  if variablesNormales[clave] == 1:\n",
+        "    # vino = \"blanco\"\n",
+        "    df_white[variableZ] = (df_white[clave] - df_white[clave].mean())/df_white[clave].std()\n",
+        "    df_white[\"Outlier\"] = 0\n",
+        "    df_white.loc[(df_white[variableZ]>3)|(df_white[variableZ]<-3) , \"Outlier\"] = 1\n",
+        "    totalOutliers = df_white.groupby(\"Outlier\").size().reset_index(name='count')\n",
+        "    totalOutliers['VariableZ'] = df_white[variableZ]\n",
+        "\n",
+        "  else:\n",
+        "    # vino = \"tinto\"\n",
+        "    df_red[variableZ] = (df_red[clave] - df_red[clave].mean())/df_red[clave].std()\n",
+        "    df_red[\"Outlier\"] = 0\n",
+        "    df_red.loc[(df_red[variableZ]>3)|(df_red[variableZ]<-3) , \"Outlier\"] = 1\n",
+        "    totalOutliers = df_red.groupby(\"Outlier\").size().reset_index(name='count')\n",
+        "    totalOutliers['VariableZ'] = df_red[variableZ]\n",
+        "\n",
+        "  # Se agrega una columna para identificar la variable\n",
+        "  totalOutliers['variable'] = clave\n",
+        "  totalOutliers['type'] = valor\n",
+        "\n",
+        "  # se concatenan  los resultados\n",
+        "  resultadoOutliers = pd.concat([resultadoOutliers, totalOutliers], ignore_index=True)\n",
+        "\n",
+        "print(resultadoOutliers)"
+      ],
+      "metadata": {
+        "id": "kre9wYCNk7af",
+        "outputId": "5121a3b4-293e-4dc8-e18a-9a56283447b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 166,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   Outlier  count  VariableZ variable  type\n",
+            "0        0   1346        NaN  density     0\n",
+            "1        1     13        NaN  density     0\n",
+            "2        0   1351        NaN       pH     0\n",
+            "3        1      8        NaN       pH     0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -5939,9 +5992,9 @@
           "height": 125
         },
         "id": "8aFvtvgYLP9r",
-        "outputId": "2d335588-5cb0-4f1c-b3b3-7165ee103219"
+        "outputId": "5f216380-192a-49d3-e6d1-4260d5777eb9"
       },
-      "execution_count": 130,
+      "execution_count": 140,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5953,7 +6006,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-226e1c4a-b7c4-43f7-abd3-71ca653ba729\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-34809ad0-409f-40f8-b901-2bb6bd994710\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -5993,7 +6046,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-226e1c4a-b7c4-43f7-abd3-71ca653ba729')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-34809ad0-409f-40f8-b901-2bb6bd994710')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -6045,12 +6098,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-226e1c4a-b7c4-43f7-abd3-71ca653ba729 button.colab-df-convert');\n",
+              "        document.querySelector('#df-34809ad0-409f-40f8-b901-2bb6bd994710 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-226e1c4a-b7c4-43f7-abd3-71ca653ba729');\n",
+              "        const element = document.querySelector('#df-34809ad0-409f-40f8-b901-2bb6bd994710');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -6070,8 +6123,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-cf42d957-e4a6-4fc3-b2df-92e233844461\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cf42d957-e4a6-4fc3-b2df-92e233844461')\"\n",
+              "<div id=\"df-581162d6-b141-48fa-8467-1c491b437fa0\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-581162d6-b141-48fa-8467-1c491b437fa0')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -6190,14 +6243,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-cf42d957-e4a6-4fc3-b2df-92e233844461 button');\n",
+              "        document.querySelector('#df-581162d6-b141-48fa-8467-1c491b437fa0 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_35fdd955-6f14-4533-972f-620cfece2726\">\n",
+              "  <div id=\"id_93b2e6cb-b076-4cbc-94c9-c18efea87ff6\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -6241,7 +6294,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_35fdd955-6f14-4533-972f-620cfece2726 button.colab-df-generate');\n",
+              "        document.querySelector('#id_93b2e6cb-b076-4cbc-94c9-c18efea87ff6 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -6262,7 +6315,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 130
+          "execution_count": 140
         }
       ]
     },
