--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZaHBmQBOFF03L8dg+ecYq",
+      "authorship_tag": "ABX9TyNmTKcItYIHT3ZQsB146fWX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 183,
+      "execution_count": null,
       "metadata": {
         "id": "ZcCNhdHM_4K_"
       },
@@ -157,7 +157,7 @@
         "id": "w0ux86UfDkJD",
         "outputId": "7cd8849d-059d-4fa6-f42b-70df21c16a44"
       },
-      "execution_count": 184,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -605,7 +605,7 @@
         "id": "swUMxE7mEatR",
         "outputId": "bc7503db-50a7-4e1a-89d9-68f313bdfaaa"
       },
-      "execution_count": 185,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -648,7 +648,7 @@
         "id": "BV_nDzupQt7W",
         "outputId": "34a874bd-0675-417b-84aa-06e2710bced0"
       },
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -697,7 +697,7 @@
         "id": "6xnagbRzrBow",
         "outputId": "1e15659b-15ca-44db-b081-9328dd57a779"
       },
-      "execution_count": 187,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -744,7 +744,7 @@
         "id": "Uri8fSIReBF5",
         "outputId": "cb4c534a-3e03-4ce4-c553-2ed9ad197d3d"
       },
-      "execution_count": 188,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1092,7 +1092,7 @@
         "id": "MgXKUH8bZWsJ",
         "outputId": "b19507bb-44be-4e08-d876-61ebf2bfdac2"
       },
-      "execution_count": 189,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1130,7 +1130,7 @@
         "id": "3SSmPIEqcFo4",
         "outputId": "7edb59f6-7fca-468d-bd36-393ff48df28c"
       },
-      "execution_count": 190,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1659,7 +1659,7 @@
         },
         "outputId": "5b3ff891-8654-4f51-d525-c18384671c58"
       },
-      "execution_count": 191,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1711,7 +1711,7 @@
         "id": "IjYghh0TRF7_",
         "outputId": "7cdca376-637e-4332-95dc-e1323e032e70"
       },
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1769,7 +1769,7 @@
         "id": "UKkZQpB5P-cL",
         "outputId": "3e143d39-ee9a-41eb-a9cc-b097f7c21019"
       },
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1804,7 +1804,7 @@
         "id": "8TO2zxDHnzAX",
         "outputId": "815af5d3-0043-4929-a092-4424e611caed"
       },
-      "execution_count": 194,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1935,7 +1935,7 @@
         "id": "TxU-xewjhH1n",
         "outputId": "3ba4d0e5-d90f-44c6-9866-78482c031103"
       },
-      "execution_count": 195,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2349,7 +2349,7 @@
         "id": "NdGWYa8UH9k7",
         "outputId": "a49e045c-b0d2-43ed-be4e-3d6ae39519c4"
       },
-      "execution_count": 196,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2383,7 +2383,7 @@
         "id": "Va6xaZdgR4iy",
         "outputId": "eb26fc34-4deb-42e4-f034-7d55d21ee22c"
       },
-      "execution_count": 197,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2412,7 +2412,7 @@
         "id": "NUmzoAa2T-4R",
         "outputId": "f017e8ce-42b5-4a26-8256-1d8a533ae594"
       },
-      "execution_count": 198,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2786,7 +2786,7 @@
         "id": "XMyRtUPf4_cx",
         "outputId": "1d9b3917-da2d-4569-d802-ed9d6b944cdd"
       },
-      "execution_count": 199,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2828,7 +2828,7 @@
         "id": "PqJQCefcbsOj",
         "outputId": "6af30539-670d-4063-8e1e-86fb976ef948"
       },
-      "execution_count": 200,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2875,7 +2875,7 @@
         "id": "zMzZhYHzcCiM",
         "outputId": "85304f51-bd35-48b2-c8a9-c15cfa432597"
       },
-      "execution_count": 201,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3185,7 +3185,7 @@
         "id": "dgAkeSktpnwa",
         "outputId": "fa081690-bb48-462d-8e3f-3e24e76d6b73"
       },
-      "execution_count": 202,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3590,7 +3590,7 @@
         "id": "PKVVI67RovX9",
         "outputId": "1053e99a-df4e-4e8e-8032-98dad40bb3b5"
       },
-      "execution_count": 203,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3899,7 +3899,7 @@
         "id": "SpIPmiM1rZuB",
         "outputId": "b77b9d8c-39ce-4063-c1be-299e69f1a086"
       },
-      "execution_count": 204,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3976,7 +3976,7 @@
         "id": "CrXEGBnULZkJ",
         "outputId": "dd98b171-297a-4a7b-f84a-62d94f6920af"
       },
-      "execution_count": 205,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4045,7 +4045,7 @@
         "id": "YXApukP0Mweo",
         "outputId": "114dde49-6ead-4f16-d3c6-f21f6fa7a18f"
       },
-      "execution_count": 206,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4145,9 +4145,22 @@
     {
       "cell_type": "code",
       "source": [
-        "# Estadística Descriptiva\n",
+        "# Separo los dataframes por tipo de vino\n",
+        "df_white = df.loc[df['type'] == 1]\n",
+        "df_red = df.loc[df['type'] == 0]"
+      ],
+      "metadata": {
+        "id": "USpGFhwqUyGV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Estadística Descriptiva VINOS BLANCOS\n",
         "\n",
-        "df.describe().round(2)"
+        "df_white.describe().round(2)"
       ],
       "metadata": {
         "colab": {
@@ -4157,7 +4170,7 @@
         "id": "h6dovbVwQeT5",
         "outputId": "95b29651-933a-47a7-b2bf-3cb402d62e18"
       },
-      "execution_count": 207,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4593,6 +4606,19 @@
     {
       "cell_type": "code",
       "source": [
+        "# Estadística Descriptiva VINOS TINTOS\n",
+        "\n",
+        "df_red.describe().round(2)"
+      ],
+      "metadata": {
+        "id": "NFTcLMxmVA4v"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Comparo la distribución de las calidades de los vinos por tipo de vino\n",
         "\n",
         "plt.figure(figsize=(8, 4))\n",
@@ -4610,7 +4636,7 @@
         "id": "CRlWyhe7Zjed",
         "outputId": "ba2b19a0-d397-444c-d9a8-64f8b5c1d615"
       },
-      "execution_count": 208,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4654,7 +4680,7 @@
         "id": "lbWq_gXNa7qN",
         "outputId": "17a8869e-317c-43c5-dfd1-24f2672cfeaa"
       },
-      "execution_count": 209,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4681,7 +4707,7 @@
         "id": "7Zfje52sawZP",
         "outputId": "647d879c-218e-4455-a4fd-cfa288d65f5a"
       },
-      "execution_count": 210,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4755,7 +4781,7 @@
         "id": "-biDo45QmMb8",
         "outputId": "b5c21162-c0d6-4c7b-aedc-3ba3aae68864"
       },
-      "execution_count": 211,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4803,7 +4829,7 @@
         "id": "WurQfxr8tWmn",
         "outputId": "e0daec17-f3bf-4e9e-ae22-52c5a714014e"
       },
-      "execution_count": 212,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4892,7 +4918,7 @@
         "id": "mqikp92cQqln",
         "outputId": "d3ab7c85-4fe6-423e-83c1-eac58f278ae0"
       },
-      "execution_count": 213,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4937,7 +4963,7 @@
         "id": "7m91ejFVFXlW",
         "outputId": "b3f1907b-1377-4772-e3ef-87ae856f2952"
       },
-      "execution_count": 214,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4977,7 +5003,7 @@
         "id": "M7gOkjGC71s_",
         "outputId": "47868436-f2d0-4896-a0de-f3b40c9c7a94"
       },
-      "execution_count": 215,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5120,7 +5146,7 @@
         "id": "n48_QdmLTBoK",
         "outputId": "89be7180-7c32-4708-b29e-25210b74cb0f"
       },
-      "execution_count": 216,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5188,17 +5214,13 @@
       "metadata": {
         "id": "GV39GFDfOjUf"
       },
-      "execution_count": 217,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Se aplica el test de Shapiro-Wilks a las variables identificadas\n",
-        "\n",
-        "# Separo los dataframes por tipo de vino\n",
-        "df_white = df.loc[df['type'] == 1]\n",
-        "df_red = df.loc[df['type'] == 0]\n",
         "\n",
         "# Test de Shapiro\n",
         "for clave, valor in diccionario.items():\n",
@@ -5220,7 +5242,7 @@
         "id": "-Cf2HyWB7IlA",
         "outputId": "6ed05f91-bf35-4ac8-ce1b-d704bcf667bb"
       },
-      "execution_count": 218,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5273,7 +5295,7 @@
         "id": "K0dFBV8NQ3zA",
         "outputId": "f876d111-d881-4ebc-f1be-13d18cd125d1"
       },
-      "execution_count": 219,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5371,7 +5393,7 @@
         "id": "dwjd0MAQr_gp",
         "outputId": "f271e921-cf93-4919-c904-ed42e1b99a35"
       },
-      "execution_count": 220,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5509,7 +5531,7 @@
         "id": "G6l0fKiiqX6P",
         "outputId": "2a0f31b1-2e98-4558-8d03-25f89b803046"
       },
-      "execution_count": 221,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5848,7 +5870,7 @@
         "id": "UXsaOVKrilKE",
         "outputId": "e18d5636-ef81-4783-8625-343dcfa1804f"
       },
-      "execution_count": 222,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5881,7 +5903,7 @@
         "id": "5T15bNVbHvw2",
         "outputId": "03156ed8-77a7-4f34-9bad-74b3f6767a01"
       },
-      "execution_count": 223,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5913,7 +5935,7 @@
       "metadata": {
         "id": "UP5gsDnMLN-A"
       },
-      "execution_count": 224,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5956,7 +5978,7 @@
         "id": "kre9wYCNk7af",
         "outputId": "e7020db1-06d6-4d10-81c9-d853899917ae"
       },
-      "execution_count": 248,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6319,7 +6341,7 @@
         "id": "_FrnJkeDBN-0",
         "outputId": "570f1915-8908-40dc-ca4e-1184827919b8"
       },
-      "execution_count": 255,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7193,7 +7215,7 @@
         "id": "GjP9bwqMB6pf",
         "outputId": "773147bd-26de-41dd-e3b2-052b853579e0"
       },
-      "execution_count": 251,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7226,7 +7248,7 @@
         "id": "IJ5ent0nCT0M",
         "outputId": "fdaa337d-9349-48f5-c715-1811137552cf"
       },
-      "execution_count": 256,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7256,8 +7278,7 @@
         "outlierTSD_df = df[df['total sulfur dioxide'] > 350]\n",
         "print(\"Cantidad outliers en 'total sulfur dioxide': \",outlierTSD_df['total sulfur dioxide'].count())\n",
         "#print(outlierTSD_df['total sulfur dioxide'])\n",
-        "df.shape\n",
-        ""
+        "df.shape\n"
       ],
       "metadata": {
         "id": "mEy7dPRYGoY4"
