--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMAuu331tB2zsmLDGH4MElw",
+      "authorship_tag": "ABX9TyNjikI/ivkUfge1EIVv/QVP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6848,19 +6848,19 @@
     {
       "cell_type": "code",
       "source": [
+        "print(\"Dimensiones del dataset antes de la remoción de outliers: \", df.shape)\n",
         "outliers = pd.concat([df_white_outliers, df_red_outliers])\n",
         "outlier_indices = outliers.index\n",
         "df = df.drop(outlier_indices)\n",
         "df = df.reset_index(drop=True)\n",
-        "df.shape\n",
-        "#print(f\"Original df shape: {len(df)}\")"
+        "print(\"Dimensiones del dataset luego de la remoción de outliers: \", df.shape)"
       ],
       "metadata": {
-        "id": "bvLAKOIiKw9r",
-        "outputId": "a5e78151-a681-48d9-aeb5-d7268174ccf6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bvLAKOIiKw9r",
+        "outputId": "a5e78151-a681-48d9-aeb5-d7268174ccf6"
       },
       "execution_count": 48,
       "outputs": [
