--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO1QlFKGo/yX4RFUkAvsuu8",
+      "authorship_tag": "ABX9TyOoCFzGesZ8VOUwgWjIgqK/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8780,7 +8780,7 @@
       "source": [
         "💡 INSIGHTS\n",
         "\n",
-        "Se observa mayor correlación positiva entre las siguientes variables (lo cual es esperable):\n",
+        "Se observa mayor correlación positiva entre las siguientes variables:\n",
         "* \"free sulfur dioxide\" y \"total sulfur dioxide\": Esto es así ya que el dióxido de azufre total incluye tanto el libre como el combinado\n",
         "* \"density\" y \"residual sugar\" en vinos blancos: Esto es así dado que la densidad del vino tiende a aumentar con el contenido de azúcar residual, ya que el azúcar contribuye al peso del líquido.\n",
         "\n",
@@ -8789,9 +8789,7 @@
         "* \"alcohol\" y \"density\": ya que a mayores concentraciones de alcohol se aligera la densidad del vino.\n",
         "\n",
         "Por su parte, llaman la atención:\n",
-        "* La ausencia de una marcada correlación entre \"Sulphates\" y \"Alcohol\" ya que los sulfitos se utilizan para estabilizar el vino y prevenir la oxidación, lo cual es importante en vinos con mayor contenido de alcohol.\n",
-        "* la correlación entre el tipo de vino y el Dióxido de azúfre total.\n",
-        "* la correlación negativa entre el tipo de vino y la acidez volátil."
+        "* La ausencia de una marcada correlación entre \"Sulphates\" y \"Alcohol\" ya que los sulfitos se utilizan para estabilizar el vino y prevenir la oxidación, lo cual es importante en vinos con mayor contenido de alcohol."
       ],
       "metadata": {
         "id": "p8QBJxmqVpAO"
@@ -8799,33 +8797,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Se relacionan la acidez fija y la acidez volatil con la calidad del vino\n",
-        "\n",
-        "df_high_quality = df[df['quality'] > 6]\n",
-        "\n",
-        "plt.figure(figsize=(10, 6))\n",
-        "\n",
-        "sns.scatterplot(x='fixed acidity', y='volatile acidity', hue='quality', data=df_high_quality, palette='viridis')\n",
-        "plt.title('Relación entre Acidez Fija, Acidez Volátil y Calidad del Vino')\n",
-        "plt.xlabel('Acidez Fija')\n",
-        "plt.ylabel('Acidez Volátil')\n",
-        "plt.show()\n"
-      ],
+      "source": [],
       "metadata": {
-        "id": "DdUy5PbOs9UH"
+        "id": "mJiyTEdklKCv"
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "No se observa relación entre la acidez fija y la acidez volátil en los vinos mejor puntuados."
-      ],
-      "metadata": {
-        "id": "Puw632NhgwDO"
-      }
     }
   ]
 }
