--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkn7v7zfuZh5JoC4M4t7qk",
+      "authorship_tag": "ABX9TyOxZ5T/ES59FAzLs27WIYNk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5290,6 +5290,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "💡 INSIGHTS\n",
+        "\n",
         "Si bien el coeficiente de variación es útil para entender la dispersión de los datos, éste no proporciona información sobre la forma de la distribución. Ésta será analizada en un posterior apartado."
       ],
       "metadata": {
@@ -6693,12 +6695,12 @@
         "df_white_outliers.describe().round(3)"
       ],
       "metadata": {
-        "id": "Fy2AWDR2nBfx",
-        "outputId": "249f4587-2a1e-4dba-9d6a-25caec8ab57a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
-        }
+        },
+        "id": "Fy2AWDR2nBfx",
+        "outputId": "249f4587-2a1e-4dba-9d6a-25caec8ab57a"
       },
       "execution_count": 171,
       "outputs": [
@@ -7404,6 +7406,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "💡 INSIGHTS\n",
+        "\n",
         "Si bien existen outliers para las variables bajo estudio, en general, los mismos se encuentran dentro del dominio esperado a excepción de los outliers asociados a los niveles de azufre que están por encima del valor máximo admisible. No obstante, según las averiguaciones realizadas los niveles de dióxido de azufre en vinos blancos europeos suelen estar por debajo de 250 partes por millón (ppm)."
       ],
       "metadata": {
@@ -7623,12 +7627,12 @@
         "df_filtered"
       ],
       "metadata": {
-        "id": "9GDDofWlmmp-",
-        "outputId": "4f315e6c-fd26-4dd4-df8a-d2c0437ae7b9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 457
-        }
+        },
+        "id": "9GDDofWlmmp-",
+        "outputId": "4f315e6c-fd26-4dd4-df8a-d2c0437ae7b9"
       },
       "execution_count": 166,
       "outputs": [
@@ -8628,6 +8632,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "💡 INSIGHTS\n",
+        "\n",
         "De la observación de los histogramas pareciera que las siguientes variables siguen una distribución normal:\n",
         "- \"fixed acidity\" en vino blancos (type = 1)\n",
         "- \"chlorides\" en vino blancos (type = 1)\n",
@@ -8775,6 +8781,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "💡 INSIGHTS\n",
+        "\n",
         "Del análisis de los QQ-Plots se concluye que:\n",
         "- La variable **\"fixed acidity\"** para los vinos blancos no sigue una distribución normal dado que la cola superior (extremo) del gráfico se desvía significativamente de la línea recta.\n",
         "- La variable **\"chlorides\"** para los vinos blancos no sigue la línea recta diagonal de la distribución normal.\n",
