--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3Ue+i17aIJ3IzPrZGaTJz",
+      "authorship_tag": "ABX9TyNF4sUtmsuWYF0S7MEC7t/Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10361,6 +10361,17 @@
       ],
       "metadata": {
         "id": "uXDymswkoU8d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **REFERENCIAS**\n",
+        "\n",
+        "* https://www.usc.gal/caa/MetAnalisisStgo1/enologia.pdf"
+      ],
+      "metadata": {
+        "id": "qyS-2upnxENH"
       }
     }
   ]
