--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPfIacofKJGH3UNQfbZfPSW",
+      "authorship_tag": "ABX9TyOJi/U8CDsJP9jkbQOu9Doc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5296,6 +5296,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Se identifican los valores tolerables 'extremos' de cada variable.\n",
+        "\n",
         "df_white = df_white.copy()\n",
         "df_red = df_red.copy()\n",
         "\n",
@@ -10966,7 +10968,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **CONCLUSIONES**\n",
+        "# **CONCLUSIONES**\n",
         "\n",
         "El análisis del dataset de vinos revela varias características importantes.\n",
         "\n",
@@ -10982,7 +10984,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **REFERENCIAS**\n",
+        "# **REFERENCIAS**\n",
         "\n",
         "* https://www.usc.gal/caa/MetAnalisisStgo1/enologia.pdf"
       ],
